# private-join-and-compute

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  EN1.yml  ENFB2.yml  ENSN1.yml  ENWT1.yml  ESFB1.yml  ESIG1.yml  ESW1.yml  FRFB1.yml  FRIG1.yml  FRSN1.yml  FRW1.yml  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-private-join-and-compute  bazel-testlogs  client.cc  client_impl.cc  client_impl.h  client_lib.cc  client_lib.h  data_util.cc  data_util.h  generate_dummy_data.cc  match.proto  message_sink.h  private_intersection_sum.proto  private_join_and_compute.cc  private_join_and_compute.h  private_join_and_compute.proto  private_join_and_compute_rpc_impl.cc  private_join_and_compute_rpc_impl.h  protocol_client.h  protocol_server.h  (+5 more)
bazel/: BUILD  pjc_deps.bzl
crypto/: BUILD  big_num.cc  big_num.h  commutative_elgamal.cc  commutative_elgamal.h  context.cc  context.h  ec_commutative_cipher.cc  ec_commutative_cipher.h  ec_group.cc  ec_group.h  ec_key.proto  ec_point.cc  ec_point.h  ec_point_util.cc  ec_point_util.h  elgamal.cc  elgamal.h  elgamal.proto  fixed_base_exp.cc  fixed_base_exp.h  mont_mul.cc  mont_mul.h  openssl_init.cc  paillier.cc  paillier.h  shanks_discrete_log.cc  shanks_discrete_log.h  two_modulus_crt.cc  two_modulus_crt.h
glog_files/: BUILD
java/: README.md
java/com/google/privacy/private_join_and_compute/encryption/commutative/: EcCommutativeCipher.java  EcCommutativeCipherBase.java  SupportedCurve.java
lib_demo/: BUILD  client.cc  server.cc
private_join_and_compute/: BUILD  client.cc  client_impl.cc  client_impl.h  data_util.cc  data_util.h  generate_dummy_data.cc  match.proto  message_sink.h  private_intersection_sum.proto  private_join_and_compute.proto  private_join_and_compute_rpc_impl.cc  private_join_and_compute_rpc_impl.h  protocol_client.h  protocol_server.h  server.cc  server_impl.cc  server_impl.h
private_join_and_compute/crypto/: BUILD  big_num.cc  big_num.h  camenisch_shoup.cc  camenisch_shoup.h  camenisch_shoup_test.cc  commutative_elgamal.cc  commutative_elgamal.h  context.cc  context.h  ec_commutative_cipher.cc  ec_commutative_cipher.h  ec_group.cc  ec_group.h  ec_key.proto  ec_point.cc  ec_point.h  ec_point_util.cc  ec_point_util.h  elgamal.cc  elgamal.h  elgamal.proto  fixed_base_exp.cc  fixed_base_exp.h  mont_mul.cc  mont_mul.h  openssl.inc  openssl_init.cc  openssl_init.h  paillier.cc  paillier.h  paillier.proto  pedersen_over_zn.cc  pedersen_over_zn.h  pedersen_over_zn_test.cc  shanks_discrete_log.cc  shanks_discrete_log.h  simultaneous_fixed_bases_exp.cc  simultaneous_fixed_bases_exp.h  simultaneous_fixed_bases_exp_test.cc  (+2 more)
private_join_and_compute/crypto/dodis_yampolskiy_prf/: BUILD  bb_oblivious_signature.cc  bb_oblivious_signature.h  bb_oblivious_signature.proto  bb_oblivious_signature_test.cc  dy_verifiable_random_function.cc  dy_verifiable_random_function.h  dy_verifiable_random_function.proto  dy_verifiable_random_function_test.cc
private_join_and_compute/crypto/proto/: BUILD  big_num.proto  camenisch_shoup.proto  ec_point.proto  pedersen.proto  proto_util.cc  proto_util.h  proto_util_test.cc
private_join_and_compute/java/com/google/privacy/private_join_and_compute/encryption/commutative/: EcCommutativeCipher.java  EcCommutativeCipherBase.java  SupportedCurve.java
private_join_and_compute/py/: BUILD  README  __init__.py
private_join_and_compute/py/ciphers/: BUILD  ec_cipher.py  ec_cipher_test.py
private_join_and_compute/py/crypto_util/: BUILD  converters.py  converters_test.py  elliptic_curve.py  elliptic_curve_test.py  ssl_util.py  ssl_util_test.py  supported_curves.py  supported_hashes.py
private_join_and_compute/py/requirements/: BUILD  requirements_lock_3_12.txt
private_join_and_compute/util/: BUILD  ec_key_util.cc  ec_key_util.h  ec_key_util_test.cc  elgamal_key_util.cc  elgamal_key_util.h  elgamal_key_util_test.cc  elgamal_proto_util.cc  elgamal_proto_util.h  elgamal_proto_util_test.cc  file.cc  file.h  file_posix.cc  file_test.cc  file_test.proto  process_record_file_parameters.h  process_record_file_util.h  process_record_file_util_test.cc  proto_util.h  proto_util_test.cc  recordio.cc  recordio.h  recordio_test.cc  status.inc  status_macros.h  status_matchers.h  status_testing.h  status_testing.inc  test.proto
util/: BUILD  canonical_errors.cc  canonical_errors.h  ec_key_util.cc  ec_key_util.h  ec_key_util_test.cc  elgamal_key_util.cc  elgamal_key_util.h  elgamal_key_util_test.cc  elgamal_proto_util.cc  elgamal_proto_util.h  elgamal_proto_util_test.cc  file.cc  file.h  file_posix.cc  file_test.cc  process_record_file_util.h  process_record_file_util_test.cc  proto_util.h  proto_util_test.cc  recordio.cc  recordio.h  recordio_test.cc  status.cc  status.h  status.inc  status_builder.h  status_macros.h  status_matchers.h  status_testing.h  status_testing.inc  statusor.cc  statusor.h  test.proto
