###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "private_join_and_compute",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "grpc", version = "1.66.0.bcr.2", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "boringssl", version = "0.20240913.0")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_java", version = "7.11.1")
bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "protobuf", version = "28.2")

# Grpc
grpc_deps = use_extension(
    "//bazel:grpc_deps.bzl",
    "grpc_extension",
)
grpc_deps.load_dependencies()
use_repo(grpc_deps)

# Python
python = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
python.parse(
    name = "pip_deps",
    requirements_lock = ":requirements.txt",
)
use_repo(python, "pip_deps")
