###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "private_join_and_compute",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "grpc", version = "1.66.0.bcr.2", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "boringssl", version = "0.20240913.0")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "protobuf", version = "28.2")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_java", version = "7.12.1")
bazel_dep(name = "rules_python", version = "0.36.0")

# Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(
    python,
    # register toolchains
    "python_3_12",
    # Handy helper for all
    "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, "pcj_deps")
pip.parse(
    hub_name = "pcj_deps",
    python_version = "3.12",
    requirements_lock = "//private_join_and_compute/py/requirements:requirements_lock_3_12.txt",
)
