###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "private_join_and_compute",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "boringssl", version = "0.20241024.0")
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_python", version = "1.0.0")

# Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(
    python,
    # register toolchains
    "python_3_12",
    # Handy helper for all
    "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, "pjc_pip_deps")
pip.parse(
    hub_name = "pjc_pip_deps",
    python_version = "3.12",
    requirements_lock = "//private_join_and_compute/py/requirements:requirements_lock_3_12.txt",
)
